fix: remove key

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -36,7 +36,7 @@ import { ViewTransitions } from 'astro:transitions';
 			</ul>
 			<div class="page-box">
 				{[...Array(50)].map((x, i) => (
-					<p key={i}>about page about page about page about page about page about page</p>
+					<p>about page about page about page about page about page about page</p>
 				))}
 			</div>
 		</div>
