--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import { ViewTransitions } from 'astro:transitions';
 			</ul>
 			<div class="page-box">
 				{[...Array(50)].map((x, i) => (
-					<p key={i}>home page home page home page home page home page home page</p>
+					<p>home page home page home page home page home page home page</p>
 				))}
 			</div>
 		</div>
