--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import { ViewTransitions } from 'astro:transitions';
 				</li>
 			</ul>
 			<div class="page-box">
-				{[...Array(50)].map((x, i) => (
+				{[...Array(50)].map(() => (
 					<p>home page home page home page home page home page home page</p>
 				))}
 			</div>
