--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,15 +1,17 @@
 ---
 import { ViewTransitions } from 'astro:transitions';
+
+const BASE_URL = import.meta.env.BASE_URL
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="icon" type="image/svg+xml" href={`${import.meta.env.BASE_URL}/favicon.svg`} />
+		<link rel="icon" type="image/svg+xml" href={`${BASE_URL}/favicon.svg`} />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<link rel="stylesheet" href={`${import.meta.env.BASE_URL}/style.css`}>
+		<link rel="stylesheet" href={`${BASE_URL}/style.css`}>
 		<title>Astro: about page</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,19 +26,19 @@ import { ViewTransitions } from 'astro:transitions';
 			<h1 class="page-heading">Astro demo with Three.js and page transitions</h1>
 			<ul class="page-menu">
 				<li>
-					<a href="/" class={Astro.url.pathname === "/" ? "active" : ""}>
+					<a href={`${BASE_URL}/`} class={Astro.url.pathname === "/" ? "active" : ""}>
 						home
 					</a>
 				</li>
 				<li>
-					<a href="/about" class={Astro.url.pathname === "/about" ? "active" : ""}>
+					<a href={`${BASE_URL}/about`} class={Astro.url.pathname === "/about" ? "active" : ""}>
 						about
 					</a>
 				</li>
 			</ul>
 			<div class="page-box">
 				{[...Array(50)].map(() => (
-					<p>about page about page about page about page about page about page</p>
+					<p>about page about page about page about page about page about page about page about page about page about page about page about page</p>
 				))}
 			</div>
 		</div>
