--- a/src/components/menu.astro
+++ b/src/components/menu.astro
@@ -14,12 +14,12 @@ const BASE_URL = import.meta.env.BASE_URL
 </div>
 <ul class="page-menu">
 	<li>
-		<a href={`${BASE_URL}/`} class={Astro.url.pathname === `${BASE_URL}/` ? "active" : ""}>
+		<a href={`${BASE_URL}/`} class={Astro.url.pathname === `${BASE_URL}` ? "active" : ""}>
 			home
 		</a>
 	</li>
 	<li>
-		<a href={`${BASE_URL}/about`} class={Astro.url.pathname === `${BASE_URL}/about` ? "active" : ""}>
+		<a href={`${BASE_URL}/about`} class={Astro.url.pathname === `${BASE_URL}/about/` ? "active" : ""}>
 			about
 		</a>
 	</li>
