--- a/src/components/menu.astro
+++ b/src/components/menu.astro
@@ -3,7 +3,7 @@ const BASE_URL = import.meta.env.BASE_URL
 ---
 <ul class="page-menu">
 	<li>
-		<a href={`${BASE_URL}/`} class={Astro.url.pathname === `${BASE_URL}/` ? "active" : ""}>
+		<a href={`${BASE_URL}/`} class={Astro.url.pathname === `${BASE_URL}` ? "active" : ""}>
 			home
 		</a>
 	</li>
