--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,24 +1,11 @@
 ---
-import { ViewTransitions } from 'astro:transitions';
-import Menu from '../components/menu.astro';
 
-const BASE_URL = import.meta.env.BASE_URL
+import Menu from '../components/menu.astro';
+import Head from '../components/head.astro';
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="icon" type="image/svg+xml" href={`${BASE_URL}/favicon.svg`} />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<link rel="stylesheet" href={`${BASE_URL}/style.css`}>
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
-		<ViewTransitions />
-		<title>Astro: home page</title>
-	</head>
+  <Head pageTitle="Astro: home page" />
 	<body>
 		<div class="canvas-wrapper">
 			<canvas id="three-js-canvas" />
