--- a/src/components/head.astro
+++ b/src/components/head.astro
@@ -6,17 +6,21 @@ export interface Props {
 
 const { pageTitle } = Astro.props;
 
-const BASE_URL = import.meta.env.BASE_URL
+const BASE_URL = import.meta.env.BASE_URL;
 ---
+
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="generator" content={Astro.generator} />
   <link rel="icon" type="image/svg+xml" href={`${BASE_URL}/favicon.svg`} />
-  <link rel="stylesheet" href={`${BASE_URL}/style.css`}>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href={`${BASE_URL}/style.css`} />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Pixelify+Sans:wght@400..700&display=swap"
+    rel="stylesheet"
+  />
   <ViewTransitions />
   <title>{pageTitle}</title>
 </head>
