--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,19 +5,24 @@ import Head from '../components/head.astro';
 
 <html lang="en">
   <Head pageTitle="Astro: about page" />
-	<body>
-		<div class="canvas-wrapper">
-			<canvas id="three-js-canvas" />
-		</div>
-		<div class="page-wrapper">
-			<h1 class="page-heading">Astro demo with Three.js and page transitions</h1>
-			<Menu />
-			<div class="page-box">
-				{[...Array(50)].map(() => (
-					<p>about page about page about page about page about page about page about page about page about page about page about page about page</p>
-				))}
-			</div>
-		</div>
-		<script src="../scripts/entry.ts"></script>
-	</body>
+  <body>
+    <div class="canvas-wrapper">
+      <canvas id="three-js-canvas"></canvas>
+    </div>
+    <div class="page-wrapper">
+      <h1 class="page-heading">Astro demo with Three.js and page transitions</h1>
+      <Menu />
+      <div class="page-box">
+        {
+          [...Array(50)].map(() => (
+            <p>
+              about page about page about page about page about page about page about page about
+              page about page about page about page about page
+            </p>
+          ))
+        }
+      </div>
+    </div>
+    <script src="../scripts/entry.ts"></script>
+  </body>
 </html>
