--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Menu from '../components/menu.astro';
 import Head from '../components/head.astro';
+
+const PARA_NUMBER = 50;
 ---
 
 <html lang="en">
@@ -14,7 +16,7 @@ import Head from '../components/head.astro';
       <Menu />
       <div class="page-box">
         {
-          [...Array(50)].map(() => (
+          [...Array(PARA_NUMBER)].map(() => (
             <p>
               home page home page home page home page home page home page home page home page home
               page home page home page home page
