fix: update text on about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,8 +18,8 @@ const PARA_NUMBER = 50;
         {
           [...Array(PARA_NUMBER)].map(() => (
             <p>
-              home page home page home page home page home page home page home page home page home
-              page home page home page home page
+              about page about page about page about page about page about page about page about
+              page about page about page about page about page
             </p>
           ))
         }
